@@ -1,3 +1,7 @@
+2005-02-11 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* support/regression/tests/bitvars.c: corrected the "fix"
+
 2005-02-10 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* support/regression/tests/bitvars.c,
